--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         </form>
       </div>
     </div>
-    <section class="valign-wrapper" id="about">
-      <div class="valign row">
+    <section class="valign-wrapper row" id="about">
+      <div class="valign col s8">
         <h2>BUILD THE DECENTRALIZED FUTURE</h2>
         <h3>ETHBuenosAires is welcoming those who want to support and build the decentralized future.</h3>
         <p>A hackaton is an opportunity to work alongside the developers, thought leaders, advisers, and companies who are making the infrastructure and applications that will power the future.</p>
