social media links

--- a/index.html
+++ b/index.html
@@ -122,6 +122,17 @@
     <section class="valign-wrapper" id="contact">
       <div class="valign">
         <div class="row">
+          <a class="network-link" href="www.google.com">
+            <img src="./images/Github.svg">
+          </a>
+          <a class="network-link" href="www.google.com">
+            <img src="./images/Slack.svg">
+          </a>
+          <a class="network-link" href="www.google.com">
+            <img src="./images/Twitter.svg">
+          </a>
+        </div>
+        <div class="row">
           <a class="contact-link" href="mailto:hello@ethbuenosaires.com">HELLO@ETHBUENOSAIRES.COM</a>
         </div>
         <div class="row">
