--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
             <li><a class="menu-text" href="#faq">FAQ</a></li>
           </ul>
           <ul class="side-nav" id="mobile-nav">
-            <li class="valign-wrapper"><a class="menu-text" href="#about">ABOUT</a></li>
-            <li class="valign-wrapper"><a class="menu-text" href="#sponsors">SPONSORS</a></li>
-            <li class="valign-wrapper"><a class="menu-text" href="#venue">VENUE</a></li>
-            <li class="valign-wrapper"><a class="menu-text" href="#faq">FAQ</a></li>
+            <li><a class="sidenav-close close-link" href="#!">X</a></li>
+            <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#about">ABOUT</a></li>
+            <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#sponsors">SPONSORS</a></li>
+            <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#venue">VENUE</a></li>
+            <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#faq">FAQ</a></li>
           </ul>
         </div>
       </nav>
@@ -122,13 +123,13 @@
     <section class="valign-wrapper" id="contact">
       <div class="valign">
         <div class="row">
-          <a class="network-link" href="www.google.com">
+          <a class="social-media" href="www.google.com">
             <img src="./images/Github.svg">
           </a>
-          <a class="network-link" href="www.google.com">
+          <a class="social-media" href="www.google.com">
             <img src="./images/Slack.svg">
           </a>
-          <a class="network-link" href="www.google.com">
+          <a class="social-media" href="www.google.com">
             <img src="./images/Twitter.svg">
           </a>
         </div>
