--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
     <section class="valign-wrapper" id="contact">
       <div class="valign">
         <div class="row">
-          <a class="social-media" href="www.google.com">
+          <a class="social-media" target="_blank" href="https://github.com/ethbuenosaires/">
             <img src="./images/Github.svg">
           </a>
-          <a class="social-media" href="www.google.com">
+          <a class="social-media" target="_blank" href="https://ethbuenosaires.slack.com/ ">
             <img src="./images/Slack.svg">
           </a>
-          <a class="social-media" href="www.google.com">
+          <a class="social-media" target="_blank" href="https://twitter.com/ethbuenosaires">
             <img src="./images/Twitter.svg">
           </a>
         </div>
