Fix casing of image file

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         map: map,
         icon: 
           {
-            url: "./images/location.svg", 
+            url: "./images/Location.svg", 
             scaledSize: new google.maps.Size(40, 40), 
             origin: new google.maps.Point(0,0), 
             anchor: new google.maps.Point(0, 0) 
