Comment out faq

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             <li><a class="menu-text" href="#about">ABOUT</a></li>
             <li><a class="menu-text" href="#sponsors">SPONSORS</a></li>
             <li><a class="menu-text" href="#venue">VENUE</a></li>
-            <li><a class="menu-text" href="#faq">FAQ</a></li>
+            <!-- <li><a class="menu-text" href="#faq">FAQ</a></li> -->
           </ul>
           <ul class="side-nav" id="mobile-nav">
             <li><a class="sidenav-close close-link" href="#!">X</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#about">ABOUT</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#sponsors">SPONSORS</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#venue">VENUE</a></li>
-            <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#faq">FAQ</a></li>
+            <!-- <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#faq">FAQ</a></li> -->
           </ul>
         </div>
       </nav>
