Redirect registrations to google form

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img src="./images/logo.svg"/> 
             <h5 class="valign">Part of the EHTGlobal community & first event in Latin America</h5>
             <h4>May 25 - 27, 2018 // Buenos Aires, Argentina</h4>
-            <button data-target="register-modal" class="details modal-trigger">REGISTER</button>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScAqWVEPfK79NL9aHLowTZAxlGrZp-atPMK3EYtWGQRcwQ8xA/viewform?usp=sf_link" target="_blank"><button class="details">REGISTER</button></a>
           </div>
         </div>
       </section>
