Add mailtos for sponsors and volunteers

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <h5 class="valign">Part of the EHTGlobal community & first event in Latin America</h5>
             <h4>May 25 - 27, 2018 // Buenos Aires, Argentina</h4>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLScAqWVEPfK79NL9aHLowTZAxlGrZp-atPMK3EYtWGQRcwQ8xA/viewform?usp=sf_link" target="_blank"><button class="details">REGISTER</button></a>
+            <p>or <a class="text-link" href="mailto:volunteers@ethbuenosaires.com">apply as a volunteer</a></p>
           </div>
         </div>
       </section>
@@ -84,7 +85,7 @@
         <h2>SPONSORS</h2>
         <h3>ETHBuenosAires sponsorship deadline is April 30th.</h3>
         <p>Qualified sponsorships receive 15-20% credit for bounties & repos.</p>
-        <button data-target="sponsor-modal" class="details modal-trigger">Become a sponsor</button>
+        <a href="mailto:sponsors@ethbuenosaires.com"><button class="details">Become a sponsor</button></a>
         <div id="sponsor-modal" class="modal">
           <div class="modal-content modal-title">
             <h2>SPONSORS</h2>
