Comment out link to ethos

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
           <a class="contact-link" href="mailto:hello@ethbuenosaires.com">HELLO@ETHBUENOSAIRES.COM</a>
         </div>
         <div class="row">
-          <a class="details">VALUES & ETHOS</a>
-          <span class="details"> - </span>
+          <!-- <a class="details">VALUES & ETHOS</a>
+          <span class="details"> - </span> -->
           <a class="details">CODE OF CONDUCT</a>
         </div>
       </div>
