Comment out modals

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </section>
     </section>
-    <div id="register-modal" class="modal">
+    <!-- <div id="register-modal" class="modal">
       <div class="modal-content modal-title centered">
         <h2>HOW DO YOU WANT TO PARTICIPATE</h2>
         <a class="btn-floating btn-large waves-effect btn-floating-active">HACKER</a>
@@ -72,7 +72,7 @@
           </div>
         </form>
       </div>
-    </div>
+    </div> -->
     <section class="valign-wrapper row" id="about">
       <div class="valign col s8">
         <h2>BUILD THE DECENTRALIZED FUTURE</h2>
@@ -86,7 +86,7 @@
         <h3>ETHBuenosAires sponsorship deadline is April 30th.</h3>
         <p>Qualified sponsorships receive 15-20% credit for bounties & repos.</p>
         <a href="mailto:sponsors@ethbuenosaires.com"><button class="details">Become a sponsor</button></a>
-        <div id="sponsor-modal" class="modal">
+        <!-- <div id="sponsor-modal" class="modal">
           <div class="modal-content modal-title">
             <h2>SPONSORS</h2>
             <p>We`ll send you more information on how to participate</p>
@@ -108,7 +108,7 @@
               </div>
             </form>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
     <section class="row" id="venue">
