Add code of conduct modal

--- a/index.html
+++ b/index.html
@@ -140,10 +140,29 @@
         <div class="row">
           <!-- <a class="details">VALUES & ETHOS</a>
           <span class="details"> - </span> -->
-          <a class="details">CODE OF CONDUCT</a>
+          <a class="details modal-trigger" data-target="coc-modal">CODE OF CONDUCT</a>
         </div>
       </div>
-    </section>  
+    </section>
+    <div id="coc-modal" class="modal">
+      <div class="modal-content modal-title">
+        <h2>CODE OF CONDUCT</h2>
+      </div>
+      <div class="modal-content">
+        <p>
+          Be cool.
+        </p>
+        <p>
+          Do not engage in harassment. Harassment includes, but is not limited to, offensive verbal comments related to gender, sexual orientation, physical or mental ability, age, socioeconomic status, ethnicity, physical appearance, race, or religion. It also encompasses deliberate intimidation, stalking, and unwelcome sexual attention. Participants asked to stop any harassing behavior are expected to comply immediately. If participants fail to comply they will be asked to leave the event.
+        </p>
+        <p>
+          Be careful and mindful of the words that you choose. Remember that sexist, racist, and other exclusionary behavior can be offensive to those around you.
+        </p>
+        <p>
+          In practice, the Ethereum ecosystem very rarely deals with these types of issues. We'll ensure that this "meatspace" event is as open and welcoming as the online Ethereum community.
+        </p>
+      </div>
+    </div>
   </body>
   <script>
     function initMap() {
