--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html style="height: 100%;">
   <head>
     <title>ETH Buenos Aires</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@ethbuenosaires" />
+    <meta name="twitter:creator" content="@ethbuenosaires" />
+    <meta name="twitter:description" content="ETH Buenos Aires is an Ethereum hackathon starting on May 25th, 2018. Part of ethglobal.co, first event of its kind in Latin America." />
+    <meta name="twitter:title" content="ETH Buenos Aires – May 25-28th, 2018" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/ethbuenosaires/website/master/images/twitter-card-icon.png" />
+    
     <meta name="description" content="">
     <meta name="author" content="Zeppelin Solutions">
     <link rel="shortcut icon" href="images/favico.ico"/> <!--Favicon -->
