--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <meta name="twitter:title" content="ETH Buenos Aires – May 25-28th, 2018" />
     <meta name="twitter:image" content="https://raw.githubusercontent.com/ethbuenosaires/website/master/images/twitter-card-icon.png" />
     
-    <meta name="description" content="">
-    <meta name="author" content="Zeppelin Solutions">
+    <meta name="description" content="ETH Buenos Aires is an Ethereum hackathon starting on May 25th, 2018. Part of ethglobal.co, first event of its kind in Latin America.">
     <link rel="shortcut icon" href="images/favico.ico"/> <!--Favicon -->
     <meta charset="UTF-8"> <!--Encoding -->
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!--Movile first -->
