--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <title>ETH Buenos Aires</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Twitter card -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@ethbuenosaires" />
     <meta name="twitter:creator" content="@ethbuenosaires" />
     <meta name="twitter:description" content="ETH Buenos Aires is an Ethereum hackathon starting on May 25th, 2018. Part of ethglobal.co, first event of its kind in Latin America." />
-    <meta name="twitter:title" content="ETH Buenos Aires – May 25-28th, 2018" />
+    <meta name="twitter:title" content="ETH Buenos Aires – May 25-28, 2018" />
     <meta name="twitter:image" content="https://raw.githubusercontent.com/ethbuenosaires/website/master/images/twitter-card-icon.png" />
+
+    <!-- Opengraph card (WhatsApp & others) -->
+    <meta property="og:title" content="ETH Buenos Aires – May 25-28, 2018" />
+    <meta property="og:description" content="ETH Buenos Aires is an Ethereum hackathon starting on May 25th, 2018. Part of ethglobal.co, first event of its kind in Latin America." />
+    <meta property="og:url" content="https://ethbuenosaires.com/" />
+    <meta property="og:site_name" content="ETH Buenos Aires" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/ethbuenosaires/website/master/images/twitter-card-icon.png" />
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/ethbuenosaires/website/master/images/twitter-card-icon.png" />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
     
     <meta name="description" content="ETH Buenos Aires is an Ethereum hackathon starting on May 25th, 2018. Part of ethglobal.co, first event of its kind in Latin America.">
     <link rel="shortcut icon" href="images/favico.ico"/> <!--Favicon -->
