Update link to the OpenZeppelin Slack
We should dedicate a dedicated channel to ETH Buenos Aires,
visible by default to new Slack members.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <a class="social-media" target="_blank" href="https://github.com/ethbuenosaires/">
             <img src="./images/Github.svg">
           </a>
-          <a class="social-media" target="_blank" href="https://ethbuenosaires.slack.com/ ">
+          <a class="social-media" target="_blank" href="https://slack.openzeppelin.org/ ">
             <img src="./images/Slack.svg">
           </a>
           <a class="social-media" target="_blank" href="https://twitter.com/ethbuenosaires">
