Add ethereum, ethglobal and zeppelin as sponsors
More to come!

--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
     <section class="valign-wrapper" id="sponsors">
       <div class="valign row">
         <h2>SPONSORS</h2>
+        <div class="row">
+          <a href="https://ethereum.org" target="_blank" alt="Ethereum" title="Ethereum" id="sponsor-ethereum">
+            <img src="./images/sponsors/Ethereum.png" />
+          </a>
+          <a href="https://ethglobal.co/" target="_blank" alt="EthGlobal" title="EthGlobal" id="sponsor-ethglobal">
+            <img src="./images/sponsors/Ethglobal.svg" />
+          </a>
+          <a href="https://zeppelin.solutions" target="_blank" alt="Zeppelin" title="Zeppelin" id="sponsor-zeppelin">
+            <img src="./images/sponsors/Zeppelin.svg" />
+          </a>
+          <!-- <a href="https://aragon.one" target="_blank" alt="Aragon" title="Aragon" id="sponsor-aragon">
+            <img src="./images/sponsors/Aragon.svg" />
+          </a> -->
+        </div>
         <h3>ETHBuenosAires sponsorship deadline is April 30th.</h3>
         <p>Qualified sponsorships receive 5-15% credit for bounties & repos.</p>
         <a href="mailto:sponsors@ethbuenosaires.com"><button class="details">Become a sponsor</button></a>
