--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
     <link rel="shortcut icon" href="images/favico.ico"/> <!--Favicon -->
     <meta charset="UTF-8"> <!--Encoding -->
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!--Movile first -->
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116542937-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-116542937-1');
+    </script>
+    
     <script src="js/jquery.min.js"></script><!--JQuery 1.11.2 local -->
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/home.js"></script>
