--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
           <a class="social-media" target="_blank" href="https://github.com/ethbuenosaires/">
             <img src="./images/Github.svg">
           </a>
-          <a class="social-media" target="_blank" href="https://slack.openzeppelin.org/ ">
+          <!-- <a class="social-media" target="_blank" href="https://ethbuenosaires.slack.com/">
             <img src="./images/Slack.svg">
-          </a>
+          </a> -->
           <a class="social-media" target="_blank" href="https://twitter.com/ethbuenosaires">
             <img src="./images/Twitter.svg">
           </a>
