--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row">
           <div class="col s12 offset-s0 m10 offset-m1 l8 offset-l2">
             <img src="./images/logo.svg"/> 
-            <h5 class="valign">Part of the EHTGlobal community & first event in Latin America</h5>
+            <h5 class="valign">Part of the ETHGlobal community & first event in Latin America</h5>
             <h4>May 25 - 27, 2018 // Buenos Aires, Argentina</h4>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLScAqWVEPfK79NL9aHLowTZAxlGrZp-atPMK3EYtWGQRcwQ8xA/viewform?usp=sf_link" target="_blank"><button class="details">REGISTER</button></a>
             <p>or <a class="text-link" href="mailto:volunteers@ethbuenosaires.com">apply to volunteer</a></p>
