--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html style="height: 100%;">
   <head>
-    <title>ETH Buenos Aires</title>
+    <title>ETHBuenosAires</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Twitter card -->
@@ -71,7 +71,7 @@
         <div class="row">
           <div class="col s12 offset-s0 m10 offset-m1 l8 offset-l2">
             <img src="./images/logo.svg"/> 
-            <h5 class="valign">Part of the EHTGlobal community & first event in Latin America</h5>
+            <h5 class="valign">Part of the ETHGlobal community & first event in Latin America</h5>
             <h4>May 25 - 27, 2018 // Buenos Aires, Argentina</h4>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLScAqWVEPfK79NL9aHLowTZAxlGrZp-atPMK3EYtWGQRcwQ8xA/viewform?usp=sf_link" target="_blank"><button class="details">REGISTER</button></a>
             <p>or <a class="text-link" href="mailto:volunteers@ethbuenosaires.com">apply to volunteer</a></p>
@@ -83,7 +83,7 @@
       <div class="valign col s8">
         <h2>BUILD THE DECENTRALIZED FUTURE</h2>
         <h3>ETHBuenosAires is welcoming those who want to support and build the decentralized future.</h3>
-        <p>A hackaton is an opportunity to work alongside the developers, thought leaders, advisers, and companies who are making the infrastructure and applications that will power the future.</p>
+        <p>The hackaton is an opportunity to work alongside the developers, thought leaders, advisers, and companies who are making the infrastructure and applications that will power the future.</p>
       </div>
     </section>
     <section class="valign-wrapper" id="sponsors">
