--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="valign col s8">
         <h2>BUILD THE DECENTRALIZED FUTURE</h2>
         <h3>ETHBuenosAires is welcoming those who want to support and build the decentralized future.</h3>
-        <p>The hackaton is an opportunity to work alongside the developers, thought leaders, advisers, and companies who are making the infrastructure and applications that will power the future.</p>
+        <p>The hackathon is an opportunity to work alongside the developers, thought leaders, advisers, and companies who are making the infrastructure and applications that will power the future.</p>
       </div>
     </section>
     <section class="valign-wrapper" id="sponsors">
