--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
       <section class="valign-wrapper" id="home">
         <div class="row">
           <div class="col s12 offset-s0 m10 offset-m1 l8 offset-l2">
-            <img src="./images/logo.svg"/> 
+            <img class="hide-on-small-only" src="./images/logo.svg"/>
+            <img class="hide-on-med-and-up" src="./images/logo-mobile.svg"/> 
             <h5 class="valign">Part of the ETHGlobal community & first event in Latin America</h5>
             <h4>May 25 - 27, 2018 // Buenos Aires, Argentina</h4>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLScAqWVEPfK79NL9aHLowTZAxlGrZp-atPMK3EYtWGQRcwQ8xA/viewform?usp=sf_link" target="_blank"><button class="details">REGISTER</button></a>
@@ -80,7 +81,7 @@
       </section>
     </section>
     <section class="valign-wrapper row" id="about">
-      <div class="valign col s8">
+      <div class="valign col s12 m8">
         <h2>BUILD THE DECENTRALIZED FUTURE</h2>
         <h3>ETHBuenosAires is welcoming those who want to support and build the decentralized future.</h3>
         <p>The hackathon is an opportunity to work alongside the developers, thought leaders, advisers, and companies who are making the infrastructure and applications that will power the future.</p>
