--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
           <a href="https://zeppelin.solutions" target="_blank" alt="Zeppelin" title="Zeppelin" id="sponsor-zeppelin">
             <img src="./images/sponsors/Zeppelin.svg" />
           </a>
-          <!-- <a href="https://aragon.one" target="_blank" alt="Aragon" title="Aragon" id="sponsor-aragon">
+          <a href="https://aragon.one" target="_blank" alt="Aragon" title="Aragon" id="sponsor-aragon">
             <img src="./images/sponsors/Aragon.svg" />
-          </a> -->
+          </a>
         </div>
         <h3>ETHBuenosAires sponsorship deadline is April 30th.</h3>
         <p>Qualified sponsorships receive 5-15% credit for bounties & repos.</p>
