--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
     <meta property="og:image:height" content="300" />
     
     <meta name="description" content="ETHBuenosAires is an Ethereum hackathon starting on May 25th, 2018. Part of ethglobal.co, first event of its kind in Latin America.">
-    <link rel="shortcut icon" href="images/favico.ico"/> <!--Favicon -->
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/site.webmanifest">
+    <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="images/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#603cba">
+    <meta name="msapplication-config" content="images/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
     <meta charset="UTF-8"> <!--Encoding -->
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!--Movile first -->
     
