--- a/index.html
+++ b/index.html
@@ -114,6 +114,48 @@
           <a href="https://aragon.one" target="_blank" alt="Aragon" title="Aragon" id="sponsor-aragon">
             <img src="./images/sponsors/Aragon.svg" />
           </a>
+          <a href="https://ecf.network/" target="_blank" alt="ethereumCommunityFound" title="Ethereum Community Found" id="sponsor-ethereum-community-found">
+            <img src="./images/sponsors/ethereum-community-found.png" />
+          </a>
+          <a href="https://golem.network/" target="_blank" alt="golem" title="golem" id="sponsor-golem">
+            <img src="./images/sponsors/golem.png" />
+          </a>
+          <a href="https://stable.fund/" target="_blank" alt="stable" title="stable" id="sponsor-stable">
+            <img src="./images/sponsors/stable.png" />
+          </a>
+<!--            <a href="https://0xproject.com/" target="_blank" alt="0x" title="0x" id="sponsor-0x">
+            <img src="./images/sponsors/0x.png" />
+          </a>
+          <a href="https://new.consensys.net/" target="_blank" alt="Consensys" title="Consensys" id="sponsor-consensys">
+            <img src="./images/sponsors/Consensys.png" />
+          </a>
+          <a href="https://cosmos.network/" target="_blank" alt="cosmos" title="cosmos" id="sponsor-cosmos">
+            <img src="./images/sponsors/cosmos.png" />
+          </a>
+          <a href="https://www.cryptokitties.co/" target="_blank" alt="CryptoKitties" title="CryptoKitties" id="sponsor-cryptoKitties">
+            <img src="./images/sponsors/CryptoKitties.png" />          
+          </a>
+          <a href="https://decentraland.org/" target="_blank" alt="decentraland" title="decentraland" id="sponsor-decentraland">
+            <img src="./images/sponsors/decentraland.png" />
+          </a>
+          <a href="https://dharma.io/" target="_blank" alt="dharma" title="dharma" id="sponsor-dharma">
+            <img src="./images/sponsors/dharma.png" />
+          </a> 
+          <a href="https://gnosis.pm/" target="_blank" alt="gnosis" title="gnosis" id="sponsor-gnosis">
+            <img src="./images/sponsors/gnosis.png" />
+          </a>
+          <a href="https://status.im/" target="_blank" alt="status" title="status" id="sponsor-status">
+            <img src="./images/sponsors/status.png" />
+          </a>
+          <a href="https://storj.io/" target="_blank" alt="storj" title="storj" id="sponsor-storj">
+            <img src="./images/sponsors/storj.png" />
+          </a>
+          <a href="https://lendroid.com" target="_blank" alt="lendroid" title="lendroid" id="sponsor-lendroid">
+            <img src="./images/sponsors/lendroid.svg" />
+          </a>
+          <a href="https://windingtree.com/" target="_blank" alt="WindingTree" title="WindingTree" id="sponsor-windingtree">
+            <img src="./images/sponsors/WindingTree.png" />
+          </a> -->
         </div>
         <h3>ETHBuenosAires sponsorship deadline is April 30th.</h3>
         <p>Qualified sponsorships receive 5-15% credit for bounties & repos.</p>
