--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             <img src="./images/sponsors/Ethereum-community-found.png" />
           </a>
           <a href="https://golem.network/" target="_blank" alt="golem" title="golem" id="sponsor-golem">
-            <img src="./images/sponsors/Golem.png" />
+            <img src="./images/sponsors/golem.png" />
           </a>
           <a href="https://stable.fund/" target="_blank" alt="stable" title="stable" id="sponsor-stable">
-            <img src="./images/sponsors/Stable.png" />
+            <img src="./images/sponsors/stable.png" />
           </a>
 <!--            <a href="https://0xproject.com/" target="_blank" alt="0x" title="0x" id="sponsor-0x">
             <img src="./images/sponsors/0x.png" />
@@ -130,28 +130,28 @@
             <img src="./images/sponsors/Consensys.png" />
           </a>
           <a href="https://cosmos.network/" target="_blank" alt="cosmos" title="cosmos" id="sponsor-cosmos">
-            <img src="./images/sponsors/Cosmos.png" />
+            <img src="./images/sponsors/cosmos.png" />
           </a>
           <a href="https://www.cryptokitties.co/" target="_blank" alt="CryptoKitties" title="CryptoKitties" id="sponsor-cryptoKitties">
             <img src="./images/sponsors/CryptoKitties.png" />          
           </a>
           <a href="https://decentraland.org/" target="_blank" alt="decentraland" title="decentraland" id="sponsor-decentraland">
-            <img src="./images/sponsors/Decentraland.png" />
+            <img src="./images/sponsors/decentraland.png" />
           </a>
           <a href="https://dharma.io/" target="_blank" alt="dharma" title="dharma" id="sponsor-dharma">
-            <img src="./images/sponsors/Dharma.png" />
+            <img src="./images/sponsors/dharma.png" />
           </a> 
           <a href="https://gnosis.pm/" target="_blank" alt="gnosis" title="gnosis" id="sponsor-gnosis">
-            <img src="./images/sponsors/Gnosis.png" />
+            <img src="./images/sponsors/gnosis.png" />
           </a>
           <a href="https://status.im/" target="_blank" alt="status" title="status" id="sponsor-status">
-            <img src="./images/sponsors/Status.png" />
+            <img src="./images/sponsors/status.png" />
           </a>
           <a href="https://storj.io/" target="_blank" alt="storj" title="storj" id="sponsor-storj">
-            <img src="./images/sponsors/Storj.png" />
+            <img src="./images/sponsors/storj.png" />
           </a>
           <a href="https://lendroid.com" target="_blank" alt="lendroid" title="lendroid" id="sponsor-lendroid">
-            <img src="./images/sponsors/Lendroid.svg" />
+            <img src="./images/sponsors/lendroid.svg" />
           </a>
           <a href="https://placeholder.com/" target="_blank" alt="WindingTree" title="WindingTree" id="sponsor-windingtree">
             <img src="./images/sponsors/Winding-tree.png" />
