toshi and winding tree as sponsors

--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
           <a href="https://stable.fund/" target="_blank" alt="stable" title="stable" id="sponsor-stable">
             <img src="./images/sponsors/stable.png" />
           </a>
+          <a href="http://www.toshi.org/" target="_blank" alt="toshi" title="toshi" id="sponsor-toshi">
+            <img src="./images/sponsors/Toshi.svg" />
+          </a>
+          <a href="https://windingtree.com/" target="_blank" alt="WindingTree" title="WindingTree" id="sponsor-windingtree">
+            <img src="./images/sponsors/Winding-tree.png" />
+          </a>
 <!--            <a href="https://0xproject.com/" target="_blank" alt="0x" title="0x" id="sponsor-0x">
             <img src="./images/sponsors/0x.png" />
           </a>
@@ -152,9 +158,6 @@
           </a>
           <a href="https://lendroid.com" target="_blank" alt="lendroid" title="lendroid" id="sponsor-lendroid">
             <img src="./images/sponsors/lendroid.svg" />
-          </a>
-          <a href="https://placeholder.com/" target="_blank" alt="WindingTree" title="WindingTree" id="sponsor-windingtree">
-            <img src="./images/sponsors/Winding-tree.png" />
           </a>
           <a href="https://blueyard.com/" target="_blank" alt="Blueyard" title="Blueyard" id="sponsor-blueyard">
             <img src="./images/sponsors/Blueyard.svg" />
