--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@
           <a href="https://windingtree.com/" target="_blank" alt="WindingTree" title="WindingTree" id="sponsor-windingtree">
             <img src="./images/sponsors/Winding-tree.png" />
           </a>
+          <a href="https://status.im/" target="_blank" alt="status" title="status" id="sponsor-status">
+            <img src="./images/sponsors/status.png" />
+          </a>
+          <a href="https://decentraland.org/" target="_blank" alt="decentraland" title="decentraland" id="sponsor-decentraland">
+            <img src="./images/sponsors/decentraland.png" />
+          </a>
+          <a href="https://blockgeeks.com/" target="_blank" alt="Blockgeeks" title="Blockgeeks" id="sponsor-blockgeeks">
+            <img src="./images/sponsors/Blockgeeks.png" />
+          </a>
 <!--            <a href="https://0xproject.com/" target="_blank" alt="0x" title="0x" id="sponsor-0x">
             <img src="./images/sponsors/0x.png" />
           </a>
@@ -141,17 +150,11 @@
           <a href="https://www.cryptokitties.co/" target="_blank" alt="CryptoKitties" title="CryptoKitties" id="sponsor-cryptoKitties">
             <img src="./images/sponsors/CryptoKitties.png" />          
           </a>
-          <a href="https://decentraland.org/" target="_blank" alt="decentraland" title="decentraland" id="sponsor-decentraland">
-            <img src="./images/sponsors/decentraland.png" />
-          </a>
           <a href="https://dharma.io/" target="_blank" alt="dharma" title="dharma" id="sponsor-dharma">
             <img src="./images/sponsors/dharma.png" />
           </a> 
           <a href="https://gnosis.pm/" target="_blank" alt="gnosis" title="gnosis" id="sponsor-gnosis">
             <img src="./images/sponsors/gnosis.png" />
-          </a>
-          <a href="https://status.im/" target="_blank" alt="status" title="status" id="sponsor-status">
-            <img src="./images/sponsors/status.png" />
           </a>
           <a href="https://storj.io/" target="_blank" alt="storj" title="storj" id="sponsor-storj">
             <img src="./images/sponsors/storj.png" />
