fix on venue address

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <h5 class="details">VENUE</h5>
           <img src="./images/venue.JPG">
           <h2>AREA 3</h2>
-          <p>El salvador 5218, Palermo,</br>Buenos Aires, Argentina.</p>
+          <p>El Salvador 5218,</br>Buenos Aires, Argentina.</p>
         </div>
         <div class="box2">
           <h5 class="details">HOTEL</h5>
