--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
           <a href="https://blockgeeks.com/" target="_blank" alt="Blockgeeks" title="Blockgeeks" id="sponsor-blockgeeks">
             <img src="./images/sponsors/Blockgeeks.png" />
           </a>
+          <a alt="ETHCommons" title="ETHCommons" id="sponsor-ethcommons">
+            <img src="./images/sponsors/ETHCommons.png" />
+          </a>
 <!--            <a href="https://0xproject.com/" target="_blank" alt="0x" title="0x" id="sponsor-0x">
             <img src="./images/sponsors/0x.png" />
           </a>
