--- a/index.html
+++ b/index.html
@@ -196,6 +196,11 @@
             <p class="speakers-text">Lane Rettig</p>
             <p class="speakers-subtitle">Ethereum Foundation</br></p>
           </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/joel_monegro.jpg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Joel Monegro</p>
+            <p class="speakers-subtitle">Partner</br>Placeholder</p>
+          </div>
         </div>
       </div>
     </section>
